@@ -1,3 +1,5 @@
+Jul 25 2002  2.5    Fixed bugs in the airsnort logger that discarded weak
+                     ap->ap data packets and weak adhoc data packets.
 Jul 24 2002  2.5    Added network/group center calculations and distance/
                      bearing to network center to panels ('f').
                     Fixed stupid tcpclient bug with parsing network data.
